--- a/README
+++ b/README
@@ -17,7 +17,7 @@ became a feature-rich reimplementation of the original Adafruit firmware.
 
 Many of the features in the xmas-icetube firmware were first implemented in
 other firmware projects; see the CREDITS file for details.  This firmware
-boasts the following features.
+boasts the following improvements over the official Adafruit firmware.
 
   - animated display transitions
   - multiple time and date formats
@@ -53,7 +53,7 @@ boasts the following features.
 
 For Ice Tube Clock hackers, this firmware has
 
-    (1) compatibility with the ATMEGA328P-PU,
+    (1) compatibility with the ATMEGA328P,
     (2) a pseudo object-oriented design,
     (3) reasonably good commenting, and
     (4) display/menus by finite state machine.
@@ -66,13 +66,12 @@ For Ice Tube Clock hackers, this firmware has
 Installation requires GNU Make, avr-libc, avr-gcc, and avrdude; the
 instructions below presume proficiency with these tools.
 
-*** IMPORTANT ***
-This firmware requires the ATMEGA328P-PU:  not the ATMEGA168V included
+This firmware requires the ATMEGA328P:  not the ATMEGA168V included
 with the Ice Tube Clock kit.  Due to all the features, this firmware
 currently requires ~25 kb of flash, but the ATMEGA168V only has 16 kb.
-Also, if your ATMEGA328P-PU has an Arduino bootloader installed, it
-will not work without reconfiguration.  See the section entitled
-USING AN ARDUINO CHIP.
+Also, if your ATMEGA328P has an Arduino bootloader installed, it will
+not work without reconfiguration.  See the TROUBLESHOOTING section for
+reconfiguration instructions.
 
 To program the chip, any avrdude-compatible ISP programmer should work,
 but programming has been tested with the Adafruit USBtinyISP, the Atmel
@@ -107,13 +106,13 @@ the included Makefile:
 (3) Connect the Programmer
 
     Before unplugging the clock, reduce the display brightness to the
-    minimum.  Ensure the clock has an ATMEGA328P-PU installed and not
+    minimum.  Ensure the clock has an ATMEGA328P installed and not
     an ATMEGA168V.  Unplug and disassemble the clock.  Most users
     report that the clock cannot be programmed without removing the
     side PCB with VFD tube, so remove that.  Reconnect the power
     adaptor.  Connect the AVR programmer to the clock's ISP header,
-    ensuring that pin one on the cable (red wire) and the marked pin
-    on the clock's ISP header match.
+    ensuring that pin one on the cable and the marked pin on the clock's
+    ISP header match.
 
 (4) Install the Firmware
 
@@ -127,32 +126,15 @@ the included Makefile:
 	% make install
 
 
-###########################
-## USING AN ARDUINO CHIP ##
-###########################
-
-The Arduino Uno chip is an ATMEGA328P-PU, but will not work in an Ice
-Tube Clock without reconfiguration.  Arduino chips have their fuse
-settings configured to use an external 16 MHz oscillator for the
-system clock.  The Ice Tube Clock does not provide a suitable external
-oscillator, and without an external oscillator, an Arduino chip will
-not function--not even to be reconfigured.
-
-To provide an external oscillator for reconfiguration, insert the
-Arduino chip into an Arduino board.  Next, connect a programmer to the
-ISP on the Arduino board and reprogram the fuses with the xmas-icetube
-Makefile:  "make install-fuse".  The ATMEGA328P-PU's fuse settings are
-now configured to use the 8 MHz internal oscillator.  The chip may be
-installed in an Ice Tube Clock clock and programmed as described in
-the INSTALLATION section.
-
-
 ####################
 ## HACKS AND MODS ##
 ####################
 
 Development of the various hacks and mods supported by this firmware
 have been discussed extensively in the Adafruit discussion board.
+Options requiring hardware changes can be enabled by uncommenting
+macros in the config.h file.  Comments in the config.h describe each
+optional feature in detail.
 
 ::Automatic Dimmer::
 http://forums.adafruit.com/viewtopic.php?f=41&t=12932
@@ -176,3 +158,71 @@ http://forums.adafruit.com/viewtopic.php?f=41&t=12720
 
 ::Per-Digit Brightness Adjustment::
 http://forums.adafruit.com/viewtopic.php?f=41&t=23586
+
+
+#####################
+## TROUBLESHOOTING ##
+#####################
+
+:: General Troubleshooting ::
+
+For many hardware issues, the Adafruit FAQs are quite helpful:
+
+  http://forums.adafruit.com/viewtopic.php?f=41&t=27032
+  http://learn.adafruit.com/ice-tube-clock-kit/faq
+
+
+The Adafruit Clocks forums is an excellent place to ask for help:
+
+  http://forums.adafruit.com/viewforum.php?f=41
+
+
+:: Programming Fails with an Arduino Chip ::
+
+The Arduino Uno chip is an ATMEGA328P, but will not work in an Ice
+Tube Clock without reconfiguration.  Arduino chips have their fuse
+settings configured to use an external 16 MHz oscillator for the
+system clock.  The Ice Tube Clock does not provide a suitable external
+oscillator, and without an external oscillator, an Arduino chip will
+not function--not even to be reconfigured.
+
+To provide an external oscillator for reconfiguration, insert the
+Arduino chip into an Arduino board.  Next, connect a programmer to the
+ISP on the Arduino board and reprogram the fuses with the xmas-icetube
+Makefile:  "make install-fuse".  The ATMEGA328P's fuse settings are
+now configured to use the 8 MHz internal oscillator and can be
+installed and programmed as described in the INSTALLATION section.
+
+This method is also described in the following thread:
+
+  http://forums.adafruit.com/viewtopic.php?p=184722#p184722
+
+
+:: Dim Digits ::
+
+The per-digit brightness control in the xmas-icetube firmware provides
+one way to increase the brightness of dim digits, but increasing
+current across the VFD filament often produces better results.  The
+most straightforward way to increase filament current is to replace
+R3 with a jumper:
+
+  http://forums.adafruit.com/viewtopic.php?p=179107#p179107
+
+
+:: Unstable Crystal Oscillator ::
+
+Oscillator caps C8 and C9 are a bit large.  Usually this only means
+that the clock consistently runs slow, losing a few seconds each day.
+When the time is periodically corrected, the automatic drift
+correction detects that the clock is running slow and compensates
+timekeeping accordingly.
+
+In some cases, the quartz oscillator will not function--or much
+worse--operate intermittently.  Faulty operation causes time loss
+and/or clock resets.  After such a reset, the clock will periodically
+display "wdt rset" to warn of time loss.  This message indicates that
+the watchdog timer ("wdt") has expired and the watchdog circuit has
+reset ("rset") the clock.  The most straightforward solution to this
+problem is to replace C8 and C9 with 10 pF caps:
+
+  http://forums.adafruit.com/viewtopic.php?p=189366#p189366
